<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/appointmentsGroup"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_doctor_search"
            android:title="@string/menu_doctor_search" />
        <item
            android:id="@+id/nav_qr_generate"
            android:title="@string/menu_qr_generate" />
        <item
            android:id="@+id/nav_qr_read"
            android:title="@string/menu_qr_read" />
    </group>
    <group
        android:id="@+id/accountGroup"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_my_account"
            android:title="@string/menu_my_account" />
        <item
            android:id="@+id/nav_my_appointments"
            android:title="@string/menu_my_appointments" />
    </group>
    <group
        android:id="@+id/logoutGroup"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_login_register"
            android:title="@string/menu_login_register" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>